# backend-website

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml  index.html  swagger-endpoints.json
.github/workflows/: cd.yml  ci.yml  swagger_pages_deploy.yml
.sqlx/: query-109bcb4b710d6baaa247f72a983b06ccd87afea40edb855cde44c60b20524420.json  query-4107e55d4b7afd9fe1e44d40b786c6f9c0fde950d5ca750d77ca61c116971960.json  query-4cd14ef0a86a8e666d0c7482f5b7448633610dc688c1f7d3ade9efb403201c41.json  query-66c7b60144836a62ad4920b455cc2f91ddc711ec0b2214459582f47e81fd9f0c.json  query-7cbe6165b0c0adde3b083dd607664a87c2288f5f2183e6b507913727c0b18b98.json  query-bd08d41f72708b85be433cd4723ba7bfa98c7e9bb1c729453673c47df9000b8d.json
migrations/: 20260503163446_create_users_table.sql  20260528000000_create_shares_table.sql  20260611000000_users_and_shares_normalization.sql
src/: health.rs  hello.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/configuration/: config.rs
src/database/: db.rs
src/endpoints/: health.rs  hello.rs  mod.rs
src/endpoints/share/: delete_logic.rs  get_logic.rs  mod.rs  update_logic.rs
src/endpoints/user/: delete_logic.rs  get_user_logic.rs  login_logic.rs  mod.rs
src/endpoints/user/registration/: mod.rs  registration_logic.rs
src/endpoints/user/registration/validators/: email_validator.rs  mod.rs  password_validator.rs
src/endpoints/user_share/: delete_logic.rs  get_logic.rs  mod.rs  post_logic.rs  put_logic.rs
tests/: get_user.rs  health.rs  hello.rs  jwt.rs  share_delete.rs  share_get.rs  share_post.rs  share_put.rs
