[package]
name = "backend-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = "0.7"
tokio           = { version = "1.52.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
dotenvy         = "0.15"
tower-http      = { version = "0.5", features = ["trace", "cors"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
argon2          = "0.5"
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
regex          = "1"
tower-sessions = "0.12.3"
tower-sessions-sqlx-store = { version = "0.12.0", default-features = false, features = ["postgres"] }
time = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] } 
http-body-util = "0.1"